--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,11 @@
             <artifactId>kafka_2.11</artifactId>
             <version>0.9.0.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
         <dependency>
             <groupId>com.101tec</groupId>
             <artifactId>zkclient</artifactId>
