feature:Add broker status when is not registered in Zookeeper
Add broker status when is not registered in Zookeeper

Change-Id: I836f25903b59fe3da75af7920d05443dff25b5cd
story: Add broker status

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mcafee.dxl.streaming.operations.client</groupId>
-    <artifactId>databus-mgmt-sdk</artifactId>
-    <version>0.0.1</version>
+    <artifactId>msdk4kafka</artifactId>
+    <version>0.9.0</version>
 
     <dependencies>
         <dependency>
